# cloudship

./: .gitignore  Cargo.toml  README.md
certs/: dummy.crt  dummy.key
src/: lib.rs  macros.rs  main.rs  storage.rs  types.rs
src/daemons/smtp/: mod.rs
src/domain/: error.rs  mod.rs  name.rs
src/droplets/: webdav.rs
src/imap4/: mod.rs  syntax.rs
src/net/: mod.rs  test.rs  tls.rs
src/smtp/: daemon.rs  mod.rs  parser.rs  protocol.rs  syntax.rs
src/smtp/daemon/: connection.rs  daemon.rs  handler.rs  mod.rs  null.rs  server.rs  session.rs
src/smtp/fs/: mod.rs  mta.rs
src/smtp/server/: buf.rs  config.rs  connection.rs  mod.rs  null.rs  protocol.rs  reply.rs  server.rs  session.rs  transport.rs
src/util/: mod.rs  scribe.rs
src/util/abnf/: core.rs  imap4.rs  ipaddr.rs  mod.rs
