[package]
name    = "cloudship"
version = "0.0.1"
authors = ["Bjørn Nordbø <bn@strangedays.no>", "Martin Hoffmann <hn@nvnc.de>"]

[dependencies]
bytes		= "0.3"
docopt  	= "0.6"
env_logger	= "0.3"
log		= "0.3"
mio		= "0.5"
nom		= "1.0"
openssl		= "0.7"
tick		= { git = "https://github.com/seanmonstar/tick.git" }

[[bin]]
name = "cloudship"
doc  = false
